--- a/package.json
+++ b/package.json
@@ -66,5 +66,8 @@
     "prettier": "^3.2.2",
     "prettier-plugin-astro": "^0.12.3",
     "prettier-plugin-tailwindcss": "^0.5.11"
+  },
+  "overrides": {
+    "sharp": "0.33.5"
   }
 }
